@@ -20,3 +20,22 @@ the "Android" keyword.
 - Details page shows repo owner's name, photo, repository's description, last update date
   time in month-day-year hour:seconds format, each field in 2 digit numbers.
 - The repository which loaded once, is saved for offline browsing.
+
+
+# License
+
+```
+    Copyright (C) Fazle Rabbi
+
+    Licensed under the Apache License, Version 2.0 (the "License");
+    you may not use this file except in compliance with the License.
+    You may obtain a copy of the License at
+
+       http://www.apache.org/licenses/LICENSE-2.0
+
+    Unless required by applicable law or agreed to in writing, software
+    distributed under the License is distributed on an "AS IS" BASIS,
+    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+    See the License for the specific language governing permissions and
+    limitations under the License.
+```
